# imgui-monitor

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE
debugglass/: debugglass.cpp  debugglass.h
debugglass/widgets/: message_monitor.cpp  message_monitor.h  tab.cpp  tab.h
examples/: BUILD.bazel
examples/hello_debugglass/: main.cpp
examples/message_monitor_demo/: main.cpp
examples/subwindow_demo/: main.cpp
monitor/: imgui_monitor.cpp  imgui_monitor.h
test/: BUILD.bazel  hello.cpp  hello_imgui.cpp  window.cpp
