module(name = "debugglass", version = "0.1.0")

bazel_dep(name = "hermetic_cc_toolchain", version = "4.0.1")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
bazel_dep(name = "glfw", version = "3.4.0.bcr.1")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.14")

http_archive = use_repo_rule(
	"@bazel_tools//tools/build_defs/repo:http.bzl",
	"http_archive",
)

http_archive(
	name = "llvm_mingw_sdk",
	urls = [
		"https://github.com/mstorsjo/llvm-mingw/releases/download/20251118/llvm-mingw-20251118-ucrt-x86_64.zip",
	],
	sha256 = "d14a2022c095b83404b64a249406478d852821d31beaa32abe31c932832b3538",
	strip_prefix = "llvm-mingw-20251118-ucrt-x86_64",
	build_file_content = """
exports_files([
	"x86_64-w64-mingw32/lib/libgdi32.a",
	"x86_64-w64-mingw32/lib/libopengl32.a",
	"x86_64-w64-mingw32/lib/libshell32.a",
	"x86_64-w64-mingw32/lib/libuser32.a",
])
""",
)

http_archive(
	name = "imgui_archive",
	urls = [
		"https://github.com/ocornut/imgui/archive/refs/tags/v1.92.2.zip",
	],
	sha256 = "8d3398f35ab9c9cf49ccc0516624f086f4242d979e82eacdf83822ce2558d0cb",
	strip_prefix = "imgui-1.92.2",
	build_file = "//third_party:imgui.BUILD",
)

toolchains_ext = use_extension(
	"@hermetic_cc_toolchain//toolchain:ext.bzl",
	"toolchains",
)

# Ensure cross-platform hermetic builds by pulling Zig SDK toolchains for
# all major host architectures we intend to target.
toolchains_ext.exec_platform(os = "linux", arch = "amd64")
toolchains_ext.exec_platform(os = "linux", arch = "arm64")
toolchains_ext.exec_platform(os = "macos", arch = "amd64")
toolchains_ext.exec_platform(os = "macos", arch = "arm64")
toolchains_ext.exec_platform(os = "windows", arch = "amd64")
toolchains_ext.exec_platform(os = "windows", arch = "arm64")

use_repo(toolchains_ext, "zig_sdk")

register_toolchains("@zig_sdk//...")
