config_setting(
    name = "linux",
    constraint_values = ["@platforms//os:linux"],
)

cc_binary(
    name = "hello_debugglass",
    srcs = ["hello_debugglass/main.cpp"],
    deps = [
        "//:debugglass",
    ],
    linkopts = select({
        ":linux": ["/usr/lib/x86_64-linux-gnu/libGL.so.1"],
        "//conditions:default": [],
    }),
)
